# TouchHelper

./: .gitignore  gradle.properties  settings.gradle.kts
FreeTools/composeApp/: build.gradle.kts
FreeToucher/app/: build.gradle.kts
FreeToucher/app/src/main/: AndroidManifest.xml
FreeToucher/app/src/main/java/org/eu/freex/app/: DevReceiver.kt  (+6 more)
FreeToucher/app/src/main/res/values/: themes.xml
FreeToucher/app/src/main/res/xml/: accessibility_service_config.xml
FreeToucher/gradle/: libs.versions.toml
FreeToucherServer/: build.gradle.kts
FreeToucherServer/src/main/java/bind/: GeneratedConstants.java
FreexTools/: settings.gradle.kts
FreexTools/composeApp/: build.gradle.kts
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/server/: build.gradle.kts
android/server/src/main/java/bind/: GeneratedConstants.java
core/: Cargo.toml
core/src/: constants.rs  input.rs  jni_binding.rs  js_engine.rs  lib.rs  logger.rs  macros.rs  uniffi_binding.rs
core/src/api/: colors.rs  image.rs
core/src/bindgen/: java_server_bindgen.rs  kotlin_bindgen.rs  ts_types_bindgen.rs
core/src/vision/: analysis.rs  colors.rs  filters.rs  skeleton.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib-sdk/: settings.gradle.kts
rust-bridge-sdk/: settings.gradle.kts
rust_core/: Cargo.toml
rust_core/bindings/: Action.ts  MacroConfig.ts
rust_core/src/: api.rs  bindgen.rs  constants.rs  core.rs  export.rs  input.rs  js_engine.rs  lib.rs  types.rs  uniffi_binding.rs
rust_core/src/actions/: control.rs  device.rs  mod.rs  touch.rs  vision.rs
rust_core/src/api/: config.rs  device.rs  thread.rs
rust_core/src/bindgen/: export.rs  gen_constants.rs  java_server_bindgen.rs  kotlin_bindgen.rs  ts_types_bindgen.rs  uniffi_bindgen.rs
rust_core/src/vision/: mod.rs  types.rs
script_template/: index.html  package-lock.json  package.json  vite.config.ts
script_template/public/: script.js  script.js.map
script_template/src/: App.vue  main.ts
script_template/src/components/: Settings.vue
script_template/src/scripts/Legend/: config.ts  index.ts  tasks.ts
script_template/src/stores/: useConfigStore.ts
script_template/src/tools/: FontMaker.vue
script_template/src/types/: global.d.ts  script-runtime.d.ts  touch-helper.d.ts
script_template/src/utils/: bridge.ts  bundler.ts  native-bridge.ts  script-helper.ts
script_template/tools/: build.js  dev.js  dev_runner.js
(+55 files in other folders)
