[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "rust_core" # 确保库名是 rust_core，生成 lib rust_core.so

[dependencies]
android_logger = "0.15.1"
image = "0.25.9"
jni = "0.21"
lazy_static = "1.5.0"
log = "0.4.29"
memmap2 = "0.9.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "11.1.0"
uniffi = "0.30.0"

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }
