[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "rust_core" # 确保库名是 rust_core，生成 librust_core.so
[[bin]]
name = "gen_all"
path = "src/bin/gen_all.rs"
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
android_logger = "0.15.1"
image = "0.25.9"
jni = "0.21"
lazy_static = "1.5.0"
log = "0.4.29"
memmap2 = "0.9.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "11.1.0"
uniffi = {version = "0.30.0", features = ["cli"]}

rquickjs = { version = "0.10.0", features = ["full-async","bindgen", "macro", "parallel"] }
tokio = { version = "1.48.0", features = ["full"] }
imageproc = "0.25.0"
thiserror = "2.0.17"
[build-dependencies]
uniffi_build = "0.30.0"
